#270 Fix not showing all the members on a crowded brand

--- a/app/styles/components/pages/brand/brands/_brand-row.scss
+++ b/app/styles/components/pages/brand/brands/_brand-row.scss
@@ -1,10 +1,9 @@
 /* bm-menu */
 %brand-row {
-  border-radius: 4px;
   background-color: #ffffff;
   overflow: hidden;
   width: 100%;
-  height: 60px;
+  min-height: 60px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -18,6 +17,8 @@
     flex-direction: row;
     justify-content: flex-start;
     cursor: pointer;
+    align-items: center;
+    height: 100%;
   }
   .brand-name {
     margin: 0 auto 0 0;
@@ -29,9 +30,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 0 8px;
+    margin: 8px;
+    flex-wrap: wrap;
     .avatar {
-      padding: 0 2px;
+      padding: 4px 2px;
     }
   }
   .column {
